prevent footer overlap with collapsed sidebar in mobile view

--- a/src/components/Global/SIdebarFooter/SidebarFooter.module.css
+++ b/src/components/Global/SIdebarFooter/SidebarFooter.module.css
@@ -13,11 +13,12 @@
     display: none;
 }
 
-.position_sticky{
+.position_sticky {
     position: sticky;
 }
 
-.position_absolute{
+.position_absolute {
+    margin-left: 15px;
     position: absolute;
 }
 .sidebar_footer a {
@@ -47,7 +48,7 @@
 }
 
 /* Small screens */
-@media only screen and (max-width:600px) {
+@media only screen and (max-width: 600px) {
     .sidebar {
         display: none;
 
